--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "popper.js": "^1.16.1",
     "vue": "^2.5.2",
     "vue-axios": "^3.3.6",
+    "vue-loading-overlay": "^3.0.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
